tests/cases/compiler-development/artifact/errors/diagnostic-match-range-pattern-order.diagnostic
diagnostic error code=T0001 family=type message="range pattern start must be <= end" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-range-pattern-order.ari" display="tests/cases/match/errors/match-range-pattern-order.ari" bytes=74
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-range-pattern-order.ari" line=3 column=5 end_line=3 end_column=10 byte_start=42 byte_end=47 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-range-pattern-order.ari:3:5\n   |\n 3 |     5..=1 => 10,\n   |     ^^^^^"
  Note index=0 location=none message="range patterns are checked as ordered intervals for the matched integer type"
  Help index=0 location=none message="write the lower bound first or split this case into separate patterns"
